# controvert

./: README.md  app.py  pyproject.toml  requirements.txt
src/backend/: __init__.py  backend.py  populate_database.py  populate_database_batched.py  preprocessing_script.py  retrieve_finance.py
src/data_backend/: mapping_controversies.json  sectors.json  sectors_mapping.json
